# ta-lib-mcp

./: .gitignore  README.md  pyproject.toml
src/ta_lib_mcp/: __init__.py  __main__.py  categories.py  constants.py  exceptions.py  indicators.py  models.py  server.py  validators.py
tests/: conftest.py  fakes.py  test_categories.py  test_indicators.py  test_server.py  test_validators.py
